change href anchor to root '/'

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,8 +2,8 @@ doctype 5
 html
   head
     title Mirror for RailsCasts
-    script(src='public/script.js')
-    link(rel='stylesheet', href='public/stylesheet.css', type="text/css", media="screen")
+    script(src='/public/script.js')
+    link(rel='stylesheet', href='/public/stylesheet.css', type="text/css", media="screen")
     meta(content="Short Ruby on Rails screencasts containing tips, tricks and tutorials. Great for both novice and experienced web developers.", name="description")
     meta(content="rails, ruby on rails, screencasts, railscast, railscasts, tips, tricks, tutorials, training, podcasts, programming", name="keywords")
 
@@ -11,7 +11,7 @@ html
     #top
       .logo
         a
-          img(width='423', height='56', src='public/logo.png')
+          img(width='423', height='56', src='/public/logo.png')
 
     #nav_bar
       form(method='get', action='/episodes')
