--- a/views/index.jade
+++ b/views/index.jade
@@ -14,8 +14,8 @@ block content
         each episode in episodes
               .episode
                 .screenshot
-                  a(href='episodes/#{episode.sequence}')
-                    img(width='200', height='125', src='screenshot/#{episode.screenshot}')
+                  a(href='/episodes/#{episode.sequence}')
+                    img(alt='#{episode.title}', width='200', height='125', src='screenshot/#{episode.screenshot}')
                 .main
                   .info
                     span.number Episode ##{episode.sequence} - 
@@ -25,5 +25,5 @@ block content
                     span.stats (#{episode.length})
 
                   div.watch
-                    a.pretty_button(href='episodes/#{episode.sequence}') Watch Episode
+                    a.pretty_button(href='/episodes/#{episode.sequence}') Watch Episode
                 div.clear
