--- a/views/episode.jade
+++ b/views/episode.jade
@@ -4,7 +4,7 @@ block content
   #episode
     .info
       .screenshot
-        a(href='/episodes/#{episode.sequence}')
+        a(href='/episodes/#{episode.slug}')
           img(alt='#{episode.title}', width='200', height='125', src='/screenshot/#{episode.screenshot}')
       h1
         span.position ##{episode.sequence}
@@ -16,7 +16,7 @@ block content
            a(href='/tag/#{tag}') #{tag},  
       .description #{episode.description}
       .watch
-        a.pretty_button(href='/episodes/#{episode.sequence}') Click to Play Video
+        a.pretty_button(href='/episodes/#{episode.slug}') Click to Play Video
       ul.downloads.horizontal
         li Downloads:
         li
@@ -27,7 +27,7 @@ block content
 
     ul.nav.horizontal
       li.selected
-        a.selected.tab(href='/episodes/#{episode.sequence}') Notes
+        a.selected.tab(href='/episodes/#{episode.slug}') Notes
       li
         a.tab(href='') Similar Episodes
 
