--- a/views/episode.jade
+++ b/views/episode.jade
@@ -33,5 +33,4 @@ block content
 
     .nav_section
       .inner
-        div.show_notes 
-          #{episode.noteHtml}
+        div.show_notes !{episode.noteHtml}
