change play video to download video

--- a/views/episode.jade
+++ b/views/episode.jade
@@ -17,7 +17,7 @@ block content
            a(href='/tag/#{tag}') #{tag},  
       .description #{episode.description}
       .watch
-        a.pretty_button(href='/episodes/#{episode.slug}') Click to Play Video
+        a.pretty_button(href='/video/#{episode.video}') Click to Play Video
       ul.downloads.horizontal
         li Downloads:
         li
