add links to root for logo

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,7 +10,7 @@ html
   body
     #top
       .logo
-        a
+        a(href='/')
           img(width='423', height='56', src='/public/logo.png')
 
     #nav_bar
