--- a/views/episode.jade
+++ b/views/episode.jade
@@ -17,13 +17,14 @@ block content
            a(href='/tag/#{tag}') #{tag},  
       .description #{episode.description}
       .watch
-        a.pretty_button(href='/video/#{episode.video}') Click to Play Video
+        a.pretty_button(href='/video/#{episode.video}.mp4') Click to Play Video
       ul.downloads.horizontal
         li Downloads:
         li
           a(href='/source-code/#{episode.source}') source code
         li
-          a(href='/video/#{episode.video}') mp4
+          a(href='/video/#{episode.video}.mp4') mp4
+          a(href='/video/#{episode.video}.webm') mp4
       .clear
 
     ul.nav.horizontal
