fixed download links in episode

--- a/views/episode.jade
+++ b/views/episode.jade
@@ -24,7 +24,8 @@ block content
           a(href='/source-code/#{episode.source}') source code
         li
           a(href='/video/#{episode.video}.mp4') mp4
-          a(href='/video/#{episode.video}.webm') mp4
+        li
+          a(href='/video/#{episode.video}.webm') webm
       .clear
 
     ul.nav.horizontal
