updated the logo

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,7 +11,7 @@ html
     #top
       .logo
         a(href='/')
-          img(width='423', height='56', src='/public/logo.png')
+          img(src='/public/logo.png')
 
     #nav_bar
       form(method='get', action='/episodes')
